--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
+    = render "layouts/header"
+
     .container
       = yield
