Storing places in DB

--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -8,4 +8,4 @@
       = distance_of_time_in_words(walking_time(venue.distance), 0, true)
       = "(starving dev will be there in #{distance_of_time_in_words(running_time(venue.distance), 0, true)})"
       .muted
-        = venue.address
+        = venue.full_address
