--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -10,12 +10,18 @@
       - else
         %span.icon-food.muted
       = link_to_venue(place)
-      - if place.votes.old.where(user: current_user).exists?
-        Yeah
-      %div
+      - if place.votes.unrated.where(user: current_user).exists?
+        &mdash; you have been there
+        = "#{days_ago_in_words(place.votes.unrated.where(user: current_user).last.created_on)}."
+        Was it
+        = link_to "good", like_place_path(place), method: :post
+        or you would like to
+        = link_to "try something else", dislike_place_path(place), method: :post
+        next time?
+      %div.muted
         = place.full_address
-        .muted
-          %em
+        %p
+          %small
             = distance_of_time_in_words(walking_time(place.distance), 0, true)
             = "(starving wimdude will be there in #{distance_of_time_in_words(running_time(place.distance), 0, true)})"
       %p
