--- a/app/views/places/_current_place.html.haml
+++ b/app/views/places/_current_place.html.haml
@@ -6,3 +6,4 @@
       = "with #{pluralize current_user.votes.current.place.votes.ne(user: current_user).size, "other"}"
     - else
       alone :(
+    = link_to "I overslept and got in viel zu spät.", vote_place_path(current_user.choice_for_today), method: :delete, class: "close btn btn-small btn-link"
