--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!! 5
-%html( lang="en" )
+%html( lang="en" ng-app="placesApp")
   %head
     %title Lunch?
     = stylesheet_link_tag    "application", :media => "all"
